# persistence-client-library

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  README  README.md  configure.ac  persistence_client_library.pc.in
Yocto/persistence-client-library/: persistence-client-library.bb  persistence-client-library.inc
Yocto/persistence-client-library-test/: persistence-client-library.bbappend
config/: org.genivi.persistence.admin.conf  pclCustomLibConfigFile.cfg  pclCustomLibConfigFile.cfg.in  pclCustomLibConfigFileWrongDefault.cfg.in
doc/: pcl_doxyfile
include/: persistence_client_custom.h  persistence_client_library.h  persistence_client_library_error_def.h  persistence_client_library_file.h  persistence_client_library_key.h
include_protected/: crc32.h  persistence_client_library.h  persistence_client_library_common_data.h  persistence_client_library_data_access.h  persistence_client_library_data_organization.h  persistence_client_library_db_access.h  persistence_client_library_db_access_ll.h  persistence_client_library_rc_table.h
persclient_tool/: Makefile.am  persistence_client_tool.c
src/: Makefile.am  crc32.c  crc32.h  persistence_client_library.c  persistence_client_library.h  persistence_client_library_access_helper.c  persistence_client_library_access_helper.h  persistence_client_library_backup_filelist.c  persistence_client_library_backup_filelist.h  persistence_client_library_common_data.c  persistence_client_library_custom_loader.c  persistence_client_library_custom_loader.h  persistence_client_library_data_access.c  persistence_client_library_data_access.h  persistence_client_library_data_organization.c  persistence_client_library_data_organization.h  persistence_client_library_db_access.c  persistence_client_library_db_access.h  persistence_client_library_db_access_ll.c  persistence_client_library_dbus_cmd.c  persistence_client_library_dbus_cmd.h  persistence_client_library_dbus_service.c  persistence_client_library_dbus_service.h  persistence_client_library_file.c  persistence_client_library_handle.c  persistence_client_library_handle.h  persistence_client_library_itzam_errors.c  persistence_client_library_itzam_errors.h  persistence_client_library_key.c  persistence_client_library_lc_interface.c  persistence_client_library_lc_interface.h  persistence_client_library_pas_interface.c  persistence_client_library_pas_interface.h  persistence_client_library_prct_access.c  persistence_client_library_prct_access.h  persistence_client_library_tree_helper.c  persistence_client_library_tree_helper.h  rbtree.c  rbtree.h
test/: Makefile.am  customLibConfigFile.cfg  persCheck.h  persCheck_0.9.8.h  persCheck_0.9.9.h  pers_pfs_test_starter.sh  pers_test_base.h  persistence-pfs-test-start.service  persistence_admin_service_mockup.c  persistence_client_library_benchmark.c  persistence_client_library_dbus_test.c  persistence_client_library_test.c  persistence_client_library_test_file.c  persistence_env_checker.c  persistence_lifeCycle_mockup.c  persistence_pfs_test.c  persistence_test_customlib.c
tools/: Makefile.am  persistence_client_tool.c  persistence_db_viewer.c
